# gw2gd

./: Cargo.toml  README.md
src/: api.rs  client.rs  gw2_api.rs  lib.rs  main.rs  strategy.rs
